src/generated/antlr/de/jfret/parser/RequirementParser.java
// Generated from Requirement.g4 by ANTLR 4.13.1
package de.jfret.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RequirementParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, AFTER=20, ALWAYS=21, AND=22, AT=23, BEFORE=24, DURING=25, 
		EVENTUALLY=26, EXCEPT=27, FALSE=28, FINALLY=29, FIRST=30, FOR=31, HOUR=32, 
		IF=33, IMMEDIATELY=34, IN=35, INITIALLY=36, IS=37, LAST=38, MICROSECOND=39, 
		MILLISECOND=40, MINUTE=41, MOD=42, MODE=43, NEVER=44, NEXT=45, NOT=46, 
		OCCURRENCE=47, OF=48, ONLY=49, OR=50, PREVIOUS=51, PROB=52, SAME=53, SATISFY=54, 
		SECOND=55, SHALL=56, THE=57, THEN=58, TICK=59, TIMEPOINT=60, TRUE=61, 
		UNLESS=62, UNTIL=63, UPON=64, WHAT=65, WHEN=66, WHENEVER=67, WHERE=68, 
		WHILE=69, WITH=70, WITHIN=71, XOR=72, ID=73, STRING=74, RELATIONAL_OP=75, 
		NUMBER=76, WS=77;
	public static final int
		RULE_reqt_body = 0, RULE_freeform = 1, RULE_nasa = 2, RULE_scope = 3, 
		RULE_reqt_condition = 4, RULE_regular_condition = 5, RULE_qualifier_word = 6, 
		RULE_qualified_condition1 = 7, RULE_qualified_condition2 = 8, RULE_scope_condition = 9, 
		RULE_scope_mode = 10, RULE_pre_condition = 11, RULE_stop_condition = 12, 
		RULE_component = 13, RULE_response = 14, RULE_satisfaction = 15, RULE_probability = 16, 
		RULE_probability_aux = 17, RULE_prob_num = 18, RULE_timing = 19, RULE_timing_aux = 20, 
		RULE_duration_upper = 21, RULE_duration_lower = 22, RULE_component_name = 23, 
		RULE_mode_name = 24, RULE_duration = 25, RULE_timeunit = 26, RULE_post_condition = 27, 
		RULE_bool_expr = 28, RULE_numeric_expr = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"reqt_body", "freeform", "nasa", "scope", "reqt_condition", "regular_condition", 
			"qualifier_word", "qualified_condition1", "qualified_condition2", "scope_condition", 
			"scope_mode", "pre_condition", "stop_condition", "component", "response", 
			"satisfaction", "probability", "probability_aux", "prob_num", "timing", 
			"timing_aux", "duration_upper", "duration_lower", "component_name", "mode_name", 
			"duration", "timeunit", "post_condition", "bool_expr", "numeric_expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "','", "'!'", "'~'", "'&'", "'|'", "'->'", "'=>'", "'<->'", 
			"'<=>'", "'('", "')'", "'true'", "'false'", "'^'", "'-'", "'*'", "'/'", 
			"'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "AFTER", "ALWAYS", "AND", 
			"AT", "BEFORE", "DURING", "EVENTUALLY", "EXCEPT", "FALSE", "FINALLY", 
			"FIRST", "FOR", "HOUR", "IF", "IMMEDIATELY", "IN", "INITIALLY", "IS", 
			"LAST", "MICROSECOND", "MILLISECOND", "MINUTE", "MOD", "MODE", "NEVER", 
			"NEXT", "NOT", "OCCURRENCE", "OF", "ONLY", "OR", "PREVIOUS", "PROB", 
			"SAME", "SATISFY", "SECOND", "SHALL", "THE", "THEN", "TICK", "TIMEPOINT", 
			"TRUE", "UNLESS", "UNTIL", "UPON", "WHAT", "WHEN", "WHENEVER", "WHERE", 
			"WHILE", "WITH", "WITHIN", "XOR", "ID", "STRING", "RELATIONAL_OP", "NUMBER", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Requirement.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RequirementParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Reqt_bodyContext extends ParserRuleContext {
		public NasaContext nasa() {
			return getRuleContext(NasaContext.class,0);
		}
		public FreeformContext freeform() {
			return getRuleContext(FreeformContext.class,0);
		}
		public Reqt_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reqt_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).enterReqt_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).exitReqt_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequirementVisitor ) return ((RequirementVisitor<? extends T>)visitor).visitReqt_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reqt_bodyContext reqt_body() throws RecognitionException {
		Reqt_bodyContext _localctx = new Reqt_bodyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_reqt_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AFTER:
			case AND:
			case BEFORE:
			case DURING:
			case EXCEPT:
			case IF:
			case IN:
			case ONLY:
			case SHALL:
			case THE:
			case UNLESS:
			case UPON:
			case WHEN:
			case WHENEVER:
			case WHERE:
			case WHILE:
			case ID:
				{
				setState(60);
				nasa();
				}
				break;
			case STRING:
				{
				setState(61);
				freeform();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(64);
				match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FreeformContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(RequirementParser.STRING, 0); }
		public FreeformContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_freeform; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).enterFreeform(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).exitFreeform(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequirementVisitor ) return ((RequirementVisitor<? extends T>)visitor).visitFreeform(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FreeformContext freeform() throws RecognitionException {
		FreeformContext _localctx = new FreeformContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_freeform);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NasaContext extends ParserRuleContext {
		public ResponseContext response() {
			return getRuleContext(ResponseContext.class,0);
		}
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public TerminalNode SHALL() { return getToken(RequirementParser.SHALL, 0); }
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public Reqt_conditionContext reqt_condition() {
			return getRuleContext(Reqt_conditionContext.class,0);
		}
		public ProbabilityContext probability() {
			return getRuleContext(ProbabilityContext.class,0);
		}
		public TimingContext timing() {
			return getRuleContext(TimingContext.class,0);
		}
		public NasaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nasa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).enterNasa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).exitNasa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequirementVisitor ) return ((RequirementVisitor<? extends T>)visitor).visitNasa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NasaContext nasa() throws RecognitionException {
		NasaContext _localctx = new NasaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nasa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(69);
				scope();
				}
				break;
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 22)) & ~0x3f) == 0 && ((1L << (_la - 22)) & 128642860451841L) != 0)) {
				{
				setState(72);
				reqt_condition();
				}
			}

			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case THE:
			case ID:
				{
				setState(75);
				component();
				setState(76);
				match(SHALL);
				}
				break;
			case SHALL:
				{
				setState(78);
				match(SHALL);
				setState(79);
				component();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(82);
				probability();
				}
				break;
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -9223354355989610492L) != 0) || _la==WITHIN) {
				{
				setState(85);
				timing();
				}
			}

			setState(88);
			response();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScopeContext extends ParserRuleContext {
		public TerminalNode ONLY() { return getToken(RequirementParser.ONLY, 0); }
		public TerminalNode EXCEPT() { return getToken(RequirementParser.EXCEPT, 0); }
		public TerminalNode IN() { return getToken(RequirementParser.IN, 0); }
		public Scope_modeContext scope_mode() {
			return getRuleContext(Scope_modeContext.class,0);
		}
		public TerminalNode UNLESS() { return getToken(RequirementParser.UNLESS, 0); }
		public TerminalNode WHILE() { return getToken(RequirementParser.WHILE, 0); }
		public Scope_conditionContext scope_condition() {
			return getRuleContext(Scope_conditionContext.class,0);
		}
		public TerminalNode WHEN() { return getToken(RequirementParser.WHEN, 0); }
		public TerminalNode IF() { return getToken(RequirementParser.IF, 0); }
		public TerminalNode DURING() { return getToken(RequirementParser.DURING, 0); }
		public TerminalNode AFTER() { return getToken(RequirementParser.AFTER, 0); }
		public TerminalNode BEFORE() { return getToken(RequirementParser.BEFORE, 0); }
		public TerminalNode NOT() { return getToken(RequirementParser.NOT, 0); }
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).enterScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).exitScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequirementVisitor ) return ((RequirementVisitor<? extends T>)visitor).visitScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_scope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ONLY:
				{
				{
				setState(90);
				match(ONLY);
				setState(106);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DURING:
				case IF:
				case IN:
				case WHEN:
					{
					{
					setState(96);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DURING:
						{
						setState(91);
						match(DURING);
						}
						break;
					case IF:
					case IN:
					case WHEN:
						{
						{
						setState(93);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==IF || _la==WHEN) {
							{
							setState(92);
							_la = _input.LA(1);
							if ( !(_la==IF || _la==WHEN) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
						}

						setState(95);
						match(IN);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(98);
					scope_mode();
					}
					}
					break;
				case WHILE:
					{
					{
					setState(99);
					match(WHILE);
					setState(100);
					scope_condition();
					}
					}
					break;
				case AFTER:
				case BEFORE:
					{
					{
					setState(101);
					_la = _input.LA(1);
					if ( !(_la==AFTER || _la==BEFORE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(104);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(102);
						scope_mode();
						}
						break;
					case 2:
						{
						setState(103);
						scope_condition();
						}
						break;
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case EXCEPT:
				{
				{
				setState(108);
				match(EXCEPT);
				setState(119);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DURING:
				case IF:
				case IN:
				case WHEN:
					{
					{
					setState(114);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DURING:
						{
						setState(109);
						match(DURING);
						}
						break;
					case IF:
					case IN:
					case WHEN:
						{
						{
						setState(111);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==IF || _la==WHEN) {
							{
							setState(110);
							_la = _input.LA(1);
							if ( !(_la==IF || _la==WHEN) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
						}

						setState(113);
						match(IN);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(116);
					scope_mode();
					}
					}
					break;
				case WHILE:
					{
					{
					setState(117);
					match(WHILE);
					setState(118);
					scope_condition();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case IF:
			case WHEN:
				{
				{
				setState(121);
				_la = _input.LA(1);
				if ( !(_la==IF || _la==WHEN) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(122);
					match(NOT);
					}
				}

				setState(125);
				match(IN);
				setState(126);
				scope_mode();
				}
				}
				break;
			case DURING:
			case IN:
				{
				{
				setState(127);
				_la = _input.LA(1);
				if ( !(_la==DURING || _la==IN) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(128);
				scope_mode();
				}
				}
				break;
			case UNLESS:
				{
				{
				setState(129);
				match(UNLESS);
				setState(130);
				match(IN);
				setState(131);
				scope_mode();
				}
				}
				break;
			case WHILE:
				{
				{
				setState(132);
				match(WHILE);
				setState(133);
				scope_condition();
				}
				}
				break;
			case AFTER:
			case BEFORE:
				{
				{
				setState(134);
				_la = _input.LA(1);
				if ( !(_la==AFTER || _la==BEFORE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(137);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(135);
					scope_mode();
					}
					break;
				case 2:
					{
					setState(136);
					scope_condition();
					}
					break;
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(141);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Reqt_conditionContext extends ParserRuleContext {
		public Regular_conditionContext regular_condition() {
			return getRuleContext(Regular_conditionContext.class,0);
		}
		public TerminalNode AND() { return getToken(RequirementParser.AND, 0); }
		public Reqt_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reqt_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).enterReqt_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).exitReqt_condition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequirementVisitor ) return ((RequirementVisitor<? extends T>)visitor).visitReqt_condition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reqt_conditionContext reqt_condition() throws RecognitionException {
		Reqt_conditionContext _localctx = new Reqt_conditionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_reqt_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AND) {
				{
				setState(144);
				match(AND);
				}
			}

			{
			setState(147);
			regular_condition();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Regular_conditionContext extends ParserRuleContext {
		public Qualified_condition1Context qualified_condition1() {
			return getRuleContext(Qualified_condition1Context.class,0);
		}
		public List<Qualified_condition2Context> qualified_condition2() {
			return getRuleContexts(Qualified_condition2Context.class);
		}
		public Qualified_condition2Context qualified_condition2(int i) {
			return getRuleContext(Qualified_condition2Context.class,i);
		}
		public Regular_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regular_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).enterRegular_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).exitRegular_condition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequirementVisitor ) return ((RequirementVisitor<? extends T>)visitor).visitRegular_condition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Regular_conditionContext regular_condition() throws RecognitionException {
		Regular_conditionContext _localctx = new Regular_conditionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_regular_condition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			qualified_condition1();
			setState(156);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(150);
						match(T__1);
						}
					}

					setState(153);
					qualified_condition2();
					}
					} 
				}
				setState(158);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			}
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(159);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Qualifier_wordContext extends ParserRuleContext {
		public TerminalNode UPON() { return getToken(RequirementParser.UPON, 0); }
		public TerminalNode WHENEVER() { return getToken(RequirementParser.WHENEVER, 0); }
		public TerminalNode WHEN() { return getToken(RequirementParser.WHEN, 0); }
		public TerminalNode UNLESS() { return getToken(RequirementParser.UNLESS, 0); }
		public TerminalNode WHERE() { return getToken(RequirementParser.WHERE, 0); }
		public TerminalNode IF() { return getToken(RequirementParser.IF, 0); }
		public Qualifier_wordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifier_word; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).enterQualifier_word(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequirementListener ) ((RequirementListener)listener).exitQualifier_word(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequirementVisitor ) return ((RequirementVisitor<? extends T>)visitor).visitQualifier_word(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Qualifier_wordContext qualifier_word() throws RecognitionException {
		Qualifier_wordContext _localctx = new Qualifier_wordContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_qualifier_word);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if ( !(((((_la - 33)) & ~0x3f) == 0 && ((1L << (_la - 33)) & 62813896705L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
